[Python3] Enable references again, replace python-bibtex by python3-bibtexparser.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -21,7 +21,7 @@ Thanks.
 	pages = "1104--1117",
 	volume = "45",
 	number = "8",
-	year = "2008"
+	year = 2008
 }
 
 @Article{ Bertrand2005,
@@ -31,7 +31,7 @@ Thanks.
 	pages = "564--577",
 	volume = "32",
 	number = "8",
-	year = "2005"
+	year = 2005
 }
 
 @Article{ Chan2011,
@@ -41,7 +41,7 @@ Thanks.
 	pages = "2235-2264",
 	volume = "7",
 	number = "6",
-	year = "2011"
+	year = 2011
 }
 
 @Article{ Chareyre2002a,
@@ -51,14 +51,14 @@ Thanks.
 	pages = "97--123",
 	volume = "9",
 	number = "2",
-	year = "2002"
+	year = 2002
 }
 
 @Article{ Chareyre2005,
 	author = "Bruno Chareyre and Pascal Villard",
 	title = "Dynamic Spar Elements and Discrete Element Methods in Two Dimensions for the Modeling of Soil-Inclusion Problems",
 	publisher = "ASCE",
-	year = "2005",
+	year = 2005,
 	journal = "Journal of Engineering Mechanics",
 	volume = "131",
 	number = "7",
@@ -71,7 +71,7 @@ Thanks.
 	author = "Bruno Chareyre",
 	title = "Modélisation du comportement d'ouvrages composites sol-géosynthétique par éléments discrets - Application aux tranchées d'ancrage en tête de talus.",
 	school = "Grenoble University",
-	year = "2003",
+	year = 2003,
 	url = "http://tel.archives-ouvertes.fr/tel-00486807/fr/"
 }
 
@@ -79,7 +79,7 @@ Thanks.
 	title = "Discrete element modeling of curved geosynthetic anchorages with known macro-properties.",
 	author = "B. Chareyre and P. Villard",
 	booktitle = "Proc., First Int. PFC Symposium, Gelsenkirchen, Germany",
-	year = "2002",
+	year = 2002,
 	pages = "197--203"
 }
 
@@ -89,14 +89,14 @@ Thanks.
 	journal = "Canadian Geotechnical Journal",
 	pages = "1193--1205",
 	volume = "41",
-	year = "2004"
+	year = 2004
 }
 
 @Article{ Lu1998,
 	author = "Ya Yan Lu",
 	title = "Computing the Logarithm of a Symmetric Positive Definite Matrix",
 	journal = "Appl. Numer. Math",
-	year = "1998",
+	year = 1998,
 	volume = "26",
 	pages = "483--496",
 	doi = "10.1016/S0168-9274(97)00103-7",
@@ -108,7 +108,7 @@ Thanks.
 	author = "F. Alonso-Marroquin and R. Garcia-Rojo and H.J. Herrmann",
 	booktitle = "Cyclic Behaviour of Soils and Liquefaction Phenomena",
 	publisher = "Taylor \& Francis",
-	year = "2004",
+	year = 2004,
 	month = "april",
 	isbn = "9058096203",
 	pages = "3--10",
@@ -120,7 +120,7 @@ Thanks.
 	title = "Microscopic origin of granular ratcheting",
 	author = "S. McNamara and R. García-Rojo and H. J. Herrmann",
 	journal = "Physical Review E",
-	year = "2008",
+	year = 2008,
 	number = "3",
 	volume = "77",
 	doi = "10.1103/PhysRevE.77.031304"
@@ -130,7 +130,7 @@ Thanks.
 	author = "R. García-Rojo and S. McNamara and H. J. Herrmann",
 	title = "Discrete element methods for the micro-mechanical investigation of granular ratcheting",
 	booktitle = "Proceedings ECCOMAS 2004",
-	year = "2004",
+	year = 2004,
 	address = "Jyvaskyla",
 	url = "http://www.ica1.uni-stuttgart.de/publications/2004/GMH04"
 }
@@ -138,7 +138,7 @@ Thanks.
 @Book{ Allen1989,
 	author = "M. P. Allen and D. J. Tildesley",
 	title = "Computer simulation of liquids",
-	year = "1989",
+	year = 1989,
 	isbn = "0-19-855645-4",
 	publisher = "Clarendon Press",
 	address = "New York, NY, USA"
@@ -146,7 +146,7 @@ Thanks.
 
 @Proceedings{ DeghmReport2006,
 	title = "Annual Report 2006",
-	year = "2006",
+	year = 2006,
 	editor = "F. V. Donzé",
 	organization = "Discrete Element Group for Hazard Mitigation",
 	publisher = "Université Joseph Fourier, Grenoble",
@@ -161,7 +161,7 @@ Thanks.
 	number = "1",
 	pages = "011302",
 	numpages = "7",
-	year = "2001",
+	year = 2001,
 	month = "Dec",
 	doi = "10.1103/PhysRevE.65.011302",
 	publisher = "American Physical Society"
@@ -174,7 +174,7 @@ Thanks.
 	volume = "14",
 	number = "11",
 	pages = "789--806",
-	year = "1997",
+	year = 1997,
 	doi = "10.1002/(SICI)1097-4563(199711)14:11<789::AID-ROB3>3.0.CO;2-Q"
 }
 
@@ -184,7 +184,7 @@ Thanks.
 	journal = "ACM Trans. Graph.",
 	volume = "15",
 	number = "3",
-	year = "1996",
+	year = 1996,
 	issn = "0730-0301",
 	pages = "179--210",
 	doi = "10.1145/231731.231732",
@@ -196,7 +196,7 @@ Thanks.
 	author = "James T. Klosowski and Martin Held and Joseph S. B. Mitchell and Henry Sowizral and Karel Zikan",
 	title = "Efficient Collision Detection Using Bounding Volume Hierarchies of k-DOPs",
 	journal = "IEEE Transactions on Visualization and Computer Graphics",
-	year = "1998",
+	year = 1998,
 	volume = "4",
 	pages = "21--36",
 	url = "http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.105.6555&rep=rep1&type=pdf"
@@ -209,7 +209,7 @@ Thanks.
 	volume = "66",
 	number = "1",
 	pages = "46--71",
-	year = "2006",
+	year = 2006,
 	publisher = "John Wiley \& Sons, Ltd.",
 	doi = "10.1002/nme.1538",
 	abstract = "Large-scale discrete element simulations, as well as a whole range of related problems, involve contact of a large number of separate bodies and an efficient and robust contact detection algorithm is necessary. There has been a number of contact detection algorithms with total detection time proportional to N ln(N) (where N is the total number of separate bodies) reported in the past. In more recent years algorithms with total CPU time proportional to N have been developed. In this work, a novel contact detection algorithm with total detection time proportional to N is proposed. The performance of the algorithm is not influenced by packing density, while memory requirements are insignificant. The algorithm is applicable to systems comprising bodies of a similar size. The algorithm is named MR (Munjiza-Rougier: Munjiza devised the algorithm, Rougier implemented it). In the second part of the paper the algorithm is extended to particles of different sizes. The new algorithm is called MMR (multi-step MR) algorithm."
@@ -222,7 +222,7 @@ Thanks.
 	volume = "43",
 	number = "1",
 	pages = "131--149",
-	year = "1998",
+	year = 1998,
 	publisher = "John Wiley \& Sons, Ltd.",
 	doi = "10.1002/(SICI)1097-0207(19980915)43:1<131::AID-NME447>3.0.CO;2-S",
 	abstract = "Large-scale discrete element simulations, as well as a whole range of related problems, involve contact of a large number of separate bodies. In this context an efficient and robust contact detection algorithm is necessary. There has been a number of contact detection algorithms with total detection time (CPU time needed to detect all couples close to each other) proportional to Nln(N) (where N is the total number of separate bodies) reported in recent years. In this work a contact detection algorithm with total detection time proportional to N is reported. The algorithm is termed NBS, which stands for no binary search. In other words, the proposed algorithm involves no binary search at any stage. In addition the performance of the algorithm in terms of total detection time is not influenced by packing density, while memory requirements are insignificant. The only limitation of the algorithm is its applicability to the systems comprising bodies of similar size."
@@ -235,7 +235,7 @@ Thanks.
 	volume = "159",
 	number = "1",
 	pages = "98",
-	year = "1967",
+	year = 1967,
 	month = "Jul",
 	doi = "10.1103/PhysRev.159.98",
 	publisher = "American Physical Society"
@@ -246,7 +246,7 @@ Thanks.
 	title = "Introduction to discrete element methods",
 	booktitle = "European Journal of Environmental and Civil Engineering",
 	publisher = "Lavoisier",
-	year = "2008",
+	year = 2008,
 	isbn = "978-2-7462-2258-8",
 	pages = "785--826",
 	editor = "Félix Darve and Jean-Pierre Ollivier"
@@ -264,7 +264,7 @@ Thanks.
 	pages = "117--127",
 	volume = "4",
 	doi = "10.1007/s11440-008-0072-1",
-	year = "2009",
+	year = 2009,
 	keywords = "Bonded rigid-bodies - Decomposition of 3-D finite rotations - Quaternion",
 	month = "July"
 }
@@ -275,7 +275,7 @@ Thanks.
 	journal = "Molecular Simulation",
 	volume = "22",
 	number = "3",
-	year = "1999",
+	year = 1999,
 	doi = "10.1080/08927029908022097",
 	url = "http://arxiv.org/pdf/physics/9901025"
 }
@@ -287,7 +287,7 @@ Thanks.
 	volume = "328",
 	number = "1--3",
 	pages = "259--268",
-	year = "2006",
+	year = 2006,
 	issn = "0301-0104",
 	doi = "10.1016/j.chemphys.2006.07.009"
 }
@@ -299,7 +299,7 @@ Thanks.
 	volume = "74",
 	number = "8",
 	pages = "1303--1313",
-	year = "2008",
+	year = 2008,
 	doi = "10.1002/nme.2210"
 }
 
@@ -319,14 +319,14 @@ Thanks.
 	author = "ICG",
 	title = "PFC3D (Particle Flow Code in 3D) Theory and Background Manual, version 3.0",
 	publisher = "Itasca Consulting Group",
-	year = "2003"
+	year = 2003
 }
 
 @PhDThesis{ Hentz2003,
 	Author = "Séebastien Hentz",
 	Title = "Modélisation d'une Structure en Béton Armé Soumise à un Choc par la méthode des Eléments Discrets",
 	School = "Université Grenoble 1 -- Joseph Fourier",
-	Year = "2003",
+	Year = 2003,
 	Month = "October"
 }
 
@@ -334,7 +334,7 @@ Thanks.
 	Author = "Mathew Price and Vasile Murariu and Garry Morrison",
 	title = "Sphere clump generation and trajectory comparison for real particles",
 	booktitle = "Proceedings of Discrete Element Modelling 2007",
-	year = "2007",
+	year = 2007,
 	url = "http://www.cogency.co.za/images/info/dem2007_sphereclump.pdf"
 }
 
@@ -349,7 +349,7 @@ Thanks.
 	abstract = "This paper aims at comparing the microplane model as a particular representative of the class of continuous material models with a discrete particle model which is of discontinuous nature. Thereby, the constitutive equations of both approaches will be based onVoigtshypothesis defining the strain state on the individual microplanes as well as the relative particle displacements. Through an appropriate constitutive assumption, the microplane stresses and the contact forces can be determined. In both cases, the equivalence of microscopic and macroscopic virtual work yields the overall stress strain relation. An elastic and an elasto-plastic material characterization of the microplane model and the particle model are derived and similarities of both approaches are illustrated.",
 	volume = "568",
 	series = "Lecture Notes in Physics",
-	year = "2001",
+	year = 2001,
 	pages = "31--46",
 	doi = "10.1007/3-540-44424-6\_3"
 }
@@ -357,7 +357,7 @@ Thanks.
 @Article{ Thornton1991,
 	title = "Impact of elastic spheres with and without adhesion",
 	author = "Colin Thornton and K. K. Yin",
-	year = "1991",
+	year = 1991,
 	journal = "Powder technology",
 	volume = "65",
 	pages = "153--166",
@@ -370,7 +370,7 @@ Thanks.
 	journal = "Géotechnique",
 	pages = "43--53",
 	volume = "50",
-	year = "2000",
+	year = 2000,
 	number = "1",
 	doi = "10.1680/geot.2000.50.1.43"
 }
@@ -382,7 +382,7 @@ Thanks.
 	volume = "",
 	number = "29",
 	pages = "47--65",
-	year = "1979",
+	year = 1979,
 	doi = "10.1680/geot.1979.29.1.47"
 }
 
@@ -392,14 +392,14 @@ Thanks.
 	Journal = "Computational Geometry: Theory and Applications",
 	Volume = "22",
 	Pages = "5--19",
-	Year = "2002"
+	Year = 2002
 }
 
 @InProceedings{ Satake1982,
 	title = "Fabric tensor in granular materials.",
 	author = "M. Satake",
 	booktitle = "Proc., IUTAM Symp. on Deformation and Failure of Granular materials, Delft, The Netherlands",
-	year = "1982",
+	year = 1982,
 	pages = "63--68"
 }
 
@@ -579,7 +579,7 @@ Thanks.
 	institution = "Particle Engineering Research Center, University of Florida, USA; Department of Materials Science and Engineering, University of Florida, USA",
 	title = "Capillary forces between two spheres with a fixed volume liquid bridge : Theory and experiment",
 	journal = "Langmuir",
-	year = "2005",
+	year = 2005,
 	volume = "21",
 	number = "24",
 	pages = "10992--10997",
@@ -612,7 +612,7 @@ Thanks.
 	volume = "269",
 	number = "2–4",
 	pages = "536--553",
-	year = "1999",
+	year = 1999,
 	issn = "0378-4371",
 	doi = "10.1016/S0378-4371(99)00183-1",
 	url = "http://www.sciencedirect.com/science/article/pii/S0378437199001831",
@@ -636,7 +636,7 @@ Thanks.
 	volume = "48",
 	number = "2",
 	pages = "219 - 244",
-	year = "2011",
+	year = 2011,
 	doi = "10.1016/j.ijrmms.2010.11.014",
 	author = "Diego Mas Ivars and Matthew E. Pierce and Caroline Darcel and Juan Reyes-Montes and David O. Potyondy and R. Paul Young and Peter A. Cundall"
 }
@@ -647,7 +647,7 @@ journal = "International Journal of Rock Mechanics and Mining Sciences ",
 volume = "41",
 number = "8",
 pages = "1329 - 1364",
-year = "2004",
+year = 2004,
 doi = "10.1016/j.ijrmms.2004.09.011",
 author = "D.O. Potyondy and P.A. Cundall"
 }
@@ -815,12 +815,13 @@ author = "D.O. Potyondy and P.A. Cundall"
 }
 
 @article{Morris1997,
+  author = {Morris, Joseph P and Fox, Patrick J and Zhu, Yi},
   title = "Modeling Low Reynolds Number Incompressible Flows Using \{SPH\} ",
   journal = "Journal of Computational Physics ",
   volume = "136",
   number = "1",
   pages = "214 - 226",
-  year = "1997",
+  year = 1997,
   note = "",
   issn = "0021-9991",
   doi = "http://dx.doi.org/10.1006/jcph.1997.5776",
@@ -855,7 +856,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 @Book{ yade:doc,
 	PUBLISHER = "{The {Y}ade Project}",
 	TITLE = "{Y}ade {D}ocumentation",
-	YEAR = "2010",
+	YEAR = 2010,
 	AUTHOR = "V. Šmilauer and E. Catalano and B. Chareyre and S. Dorofeenko and J. Duriez and A. Gladky and J. Kozicki and C. Modenese and L. Scholtès and L. Sibille and J. Stránský and K. Thoeni",
 	ALTEDITOR = "Václav Šmilauer",
 	EDITION = "{1st}",
@@ -881,7 +882,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 	booktitle = "{Y}ade {D}ocumentation",
 	editor = "V. Šmilauer",
 	publisher = "{The {Y}ade Project}",
-	year = "2010",
+	year = 2010,
 	edition = "{1st}",
 	note = "http://yade-dem.org/doc/formulation.html",
 	altnote = "\\url{http://yade-dem.org/doc/formulation.html}",
@@ -894,7 +895,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 	editor = "V. Šmilauer",
 	publisher = "{The {Y}ade Project}",
 	title = "{Y}ade {R}eference {D}ocumentation",
-	year = "2010",
+	year = 2010,
 	edition = "{1st}",
 	note = "http://yade-dem.org/doc/",
 	altnote = "\\url{http://yade-dem.org/doc/}",
@@ -924,7 +925,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 	title = "Stochastic Augmentation of the Discrete Element Method for the Investigation of Tensile Rupture in Heterogeneous Rock",
 	author = "R. Caulk",
 	journal = "Yade Technical Archive",
-	year = "2018",
+	year = 2018,
 	url= "https://www.yade-dem.org/w/images/f/f3/Caulkr_stochasticaugmentationofDEM-031618.pdf"
 }
 
@@ -936,7 +937,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 	pages = "867-872",
 	title = "Simulating acoustic emissions in bonded-particle models of rock",
 	volume = "37",
-	year = "2000"
+	year = 2000
 }
 
 @Article{ Hazzard2013,
@@ -944,7 +945,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 	journal = "3rd International FLAC/DEM Symposium‏",
 	pages = "1-11",
 	title = "Further investigations of microseismicity in bonded particle models",
-	year = "2013"
+	year = 2013
 }
 
 @book{Scholz2003,
