--- a/doc/yade-docref.bib
+++ b/doc/yade-docref.bib
@@ -6,7 +6,7 @@
 	note = "http://yade-dem.org/doc/",
 	title = "{{Y}ade {D}ocumentation 2nd ed}",
 	publisher = "{The {Y}ade Project}",
-	year = "2015"
+	year = 2015,
 }
 
 @incollection{yade:manual2,
@@ -17,7 +17,7 @@
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
 	title = "Using and Programming",
-	year = "2015"
+	year = 2015,
 }
 
 @incollection{yade:background2,
@@ -28,7 +28,7 @@
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
 	title = "DEM formulation",
-	year = "2015"
+	year = 2015,
 }
 
 @incollection{yade:reference2,
@@ -39,7 +39,7 @@
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
 	title = "Reference Manual",
-	year = "2015"
+	year = 2015,
 }
 
 
