--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -25,7 +25,7 @@ url={http://yade-dem.org/publi/AboulHosn_GRMA_2017.pdf}
 	journal = "Computers and Geotechnics",
 	volume = "95",
 	pages = "30 - 39",
-	year = "2018",
+	year = 2018,
 	doi = "https://doi.org/10.1016/j.compgeo.2017.11.006",
 	url = "http://yade-dem.org/publi/AboulHosn_CompGeo_2018.pdf",
 	author = "R. Aboul Hosn and L. Sibille and N. Benahmed and B. Chareyre"
@@ -490,7 +490,7 @@ journal = "Journal of Magnetism and Magnetic Materials",
 volume = "446",
 number = "Supplement C",
 pages = "185--191",
-year = "2018",
+year = 2018,
 issn = "0304-8853",
 doi = "10.1016/j.jmmm.2017.09.031",
 url = "https://doi.org/10.1016/j.jmmm.2017.09.031",
@@ -568,7 +568,7 @@ author = "Markus Gusenbauer and Thomas Schrefl",
   volume = "6",
   number = "",
   pages = "118 - 123",
-  year = "2017",
+  year = 2017,
   note = "",
   issn = "2352-7110",
   doi = "https://doi.org/10.1016/j.softx.2017.05.001",
@@ -1387,7 +1387,7 @@ author = {R. Wan and J. Duriez and F. Darve}
 @article{Pirnia2018,
 title = "ICY: An interface between COMSOL multiphysics and discrete element code YADE for the modelling of porous media",
 journal = "Computers & Geosciences",
-year = "2018",
+year = 2018,
 doi = "https://doi.org/10.1016/j.cageo.2018.11.002",
 author = "Pouyan Pirnia and François Duhaime and Yannic Ethier and Jean-Sébastien Dubé"
 }
