add comsol instructional guide to yta

--- a/doc/yade-tech-archive.bib
+++ b/doc/yade-tech-archive.bib
@@ -30,3 +30,11 @@
   	url = {https://www.yade-dem.org/publi/YadeTechnicalArchive/Caulkr_stochasticaugmentationofDEM-301118.pdf},
   	doi = {10.5281/zenodo.1202039}
 }
+
+@article{Pirnia2019,
+  	author = {Pirnia, P.},
+  	title = {COMSOL-Yade Interface (ICY) instruction guide},
+  	journal = {Yade Technical Archive},
+  	year={2019},
+  	url = {https://www.yade-dem.org/publi/YadeTechnicalArchive/ICYinstructionguide.pdf}
+}
