--- a/doc/yade-tech-archive.bib
+++ b/doc/yade-tech-archive.bib
@@ -22,13 +22,12 @@
     url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_Validations.pdf}
 }
 
-@article{Caulk2018,
-  	author = {Caulk, R.},
-  	title = {Stochastic Augmentation of the Discrete Element Method for the Investigation of Tensile Rupture in Heterogeneous Rock},
+@article{Chareyre2019,
+  	author = {Chareyre, B. and Caulk, R.A. and Chèvremont, W. and Guntz, T. and Kneib, F. and Kunhappen, D. and Pourroy, J.},
+  	title = {Calcul distribué MPI pour la dynamique de systèmes particulaires},
   	journal = {Yade Technical Archive},
-  	year={2018},
-  	url = {https://www.yade-dem.org/publi/YadeTechnicalArchive/Caulkr_stochasticaugmentationofDEM-301118.pdf},
-  	doi = {10.5281/zenodo.1202039}
+  	year={2019},
+  	url = {https://www.yade-dem.org/publi/YadeTechnicalArchive/YadeMPIhackathon.pdf}
 }
 
 @article{Pirnia2019,
@@ -37,4 +36,13 @@
   	journal = {Yade Technical Archive},
   	year={2019},
   	url = {https://www.yade-dem.org/publi/YadeTechnicalArchive/ICYinstructionguide.pdf}
+}
+
+@article{Caulk2018,
+  	author = {Caulk, R.},
+  	title = {Stochastic Augmentation of the Discrete Element Method for the Investigation of Tensile Rupture in Heterogeneous Rock},
+  	journal = {Yade Technical Archive},
+  	year={2018},
+  	url = {https://www.yade-dem.org/publi/YadeTechnicalArchive/Caulkr_stochasticaugmentationofDEM-301118.pdf},
+  	doi = {10.5281/zenodo.1202039}
 }
