Fix "Jun" in references.bib, #pragma GCC diagnostic pop - to find bugs early we need all the warnings!

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1006,7 +1006,7 @@ URL = {https://doi.org/10.1063/1.5001514}
   NUMBER = {2018GREAI045},
   SCHOOL = {{Universit{\'e} Grenoble Alpes}},
   YEAR = {2018},
-  MONTH = Jun,
+  MONTH = "Jun",
   KEYWORDS = {Finite volume method ; Fibers ; Turbulence ; Discrete element method ; M{\'e}thode des volumes finis ; Fibres ; M{\'e}thode des {\'e}l{\'e}ments discrets},
   TYPE = {Theses},
   PDF = {https://tel.archives-ouvertes.fr/tel-01877792/file/KUNHAPPAN_2018_archivage.pdf},
