--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -753,6 +753,17 @@ author = "Markus Gusenbauer and Thomas Schrefl",
 	doi={10.1007/s10035-018-0815-0},
 }
 
+@article{Kozicki2019,
+	title={{Simulations of hydro-fracking in rock mass at meso-scale using fully coupled DEM/CFD approach}},
+	author={Krzaczek, M. and Nitka, M. and Kozicki, J. and Tejchman, J.},
+	journal={Acta Geotechnica},
+	year={2019},
+	month={Apr},
+	issn={1861-1133},
+	url={https://doi.org/10.1007/s11440-019-00799-6},
+	doi={10.1007/s11440-019-00799-6},
+}
+
 
 @article{Kunhappan2017,
   title={Numerical modeling of high aspect ratio flexible fibers in inertial flows},
