Add citation to Chevremont2019

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -83,6 +83,22 @@ Thanks.
 	pages = "197--203"
 }
 
+@article{ Chevremont2019,
+  title = "Quantitative study of the rheology of frictional suspensions: Influence of friction coefficient in a large range of viscous numbers",
+  author = "Chèvremont, William and Chareyre, Bruno and Bodiguel, Hugues",
+  journal = "Phys. Rev. Fluids",
+  volume = "4",
+  issue = "6",
+  pages = "064302",
+  numpages = "17",
+  year = "2019",
+  month = "Jun",
+  publisher = "American Physical Society",
+  doi = "10.1103/PhysRevFluids.4.064302",
+  url = "https://link.aps.org/doi/10.1103/PhysRevFluids.4.064302"
+}
+
+
 @Article{ Villard2004a,
 	title = "Design methods for geosynthetic anchor trenches on the basis of true scale experiments and discrete element modelling",
 	author = "P. Villard and B. Chareyre",
