--- a/doc/yade-conferences.bib
+++ b/doc/yade-conferences.bib
@@ -1,4 +1,3 @@
-
 @inproceedings{Stransky2010,
 	title={Macroscopic elastic properties of particle models},
 	author={Jan Stránský and Milan Jirásek and Václav Šmilauer},
@@ -911,6 +910,16 @@
   Url = {http://congress.cimne.com/particles2015/frontal/doc/E-book_PARTICLES_2015.pdf}
 }
 
+@InProceedings{Darve2016,
+	title = {DEM modelling in Geomechanics: some recent breakthroughs},
+	author = {F. Darve and J. Duriez and R. Wan},
+	booktitle = {Proceedings of the 7th International Conference on Discrete Element Methods},
+	editor={X. Li and Y. Feng and G. Mustoe},
+	year = {2016},
+	publisher={Springer},
+	adress = {Dalian}
+}
+
 @InProceedings{Duriez2015,
         title = {Effective stress in unsaturated granular materials: micro-mechanical insights},
         author = {J. Duriez and R. Wan},
@@ -946,14 +955,13 @@
 	year = {2017}
 }
 
-@InProceedings{Darve2016,
-	title = {DEM modelling in Geomechanics: some recent breakthroughs},
-	author = {F. Darve and J. Duriez and R. Wan},
-	booktitle = {Proceedings of the 7th International Conference on Discrete Element Methods},
-	editor={X. Li and Y. Feng and G. Mustoe},
-	year = {2016},
-	publisher={Springer},
-	adress = {Dalian}
+@inproceedings{Duriez2019,
+	author = {J. Duriez and S. Duverger and R. Wan},
+	title = {A micromechanical, μUNSAT, approach for wet granular soils},
+	booktitle = {8th International Conference on Discrete Element Methods},
+	year = {2019},
+	address = {Enschede, Netherlands},
+	url = {https://mercurylab.co.uk/dem8/wp-content/uploads/sites/4/2019/07/216.pdf}
 }
 
 @InProceedings{Sweijen2017c,
@@ -1167,4 +1175,31 @@
 	year = {2013},
 	address = {Stuttgart, Germany},
 	url = {https://www.researchgate.net/publication/278410338},
+}
+
+@inproceedings{Caulk2019a,
+	author = {Caulk, R.A. and Chareyre, B.},
+	title = {An open framework for the simulation of coupled Thermo-Hydro-Mechanical processes in Discrete Element Systems},
+	booktitle = {8th International Conference on Discrete Element Methods},
+	year = {2019},
+	address = {Enschede, Netherlands},
+	url = {https://mercurylab.co.uk/dem8/wp-content/uploads/sites/4/2019/07/217.pdf},
+}
+
+@inproceedings{Caulk2019b,
+	author = {Caulk, R.A., and Kozicki, J. and Kunhappan, D., and Maurin, R., and Montellà, E.P., and Sweijen, T., and Yuan, C., and Chareyre, B.},
+	title = {Yade's (undeniable) transformation into a model project of optimzation, multi-physics couplings, and user support},
+	booktitle = {8th International Conference on Discrete Element Methods},
+	year = {2019},
+	address = {Enschede, Netherlands},
+	url = {https://mercurylab.co.uk/dem8/wp-content/uploads/sites/4/2019/07/225.pdf},
+}
+
+@inproceedings{Chareyre2019,
+	author = {Chareyre B., and Montellà, E.P., and Yuan, C., and Gens, A.},
+	title = {A hybrid pore network - LBM method for integrating flow of immiscible phases in DEM},
+	booktitle = {8th International Conference on Discrete Element Methods},
+	year = {2019},
+	address = {Enschede, Netherlands},
+	url = {https://mercurylab.co.uk/dem8/wp-content/uploads/sites/4/2019/07/227.pdf},
 }
