--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -10,14 +10,14 @@
 }
 
 @Article{AboulHosn2017,
-author={Aboul Hosn, R. and Sibille, L. and Benahmed, N. and Chareyre, B.},
-title={Discrete numerical modeling of loose soil with spherical particles and interparticle rolling friction},
-journal={Granular Matter},
-year={2017},
-volume={19},
-number={4},
-doi={10.1007/s10035-016-0687-0},
-url={http://yade-dem.org/publi/AboulHosn_GRMA_2017.pdf}
+    author={Aboul Hosn, R. and Sibille, L. and Benahmed, N. and Chareyre, B.},
+    title={Discrete numerical modeling of loose soil with spherical particles and interparticle rolling friction},
+    journal={Granular Matter},
+    year={2017},
+    volume={19},
+    number={4},
+    doi={10.1007/s10035-016-0687-0},
+    url={http://yade-dem.org/publi/AboulHosn_GRMA_2017.pdf}
 }
 
 @article{AboulHosn2018,
@@ -237,6 +237,18 @@ url={http://yade-dem.org/publi/AboulHosn_GRMA_2017.pdf}
 	year = {2010},
 	doi = {10.1016/j.compgeo.2009.08.004},
 	author = {Dang, H. K. and Meguid, M. A.}
+}
+
+@article{DePue2019,
+    title = "Calibration of DEM material parameters to simulate stress-strain behaviour of unsaturated soils during uniaxial compression",
+    journal = "Soil and Tillage Research",
+    volume = "194",
+    pages = "104303",
+    year = "2019",
+    issn = "0167-1987",
+    doi = "https://doi.org/10.1016/j.still.2019.104303",
+    url = "http://www.sciencedirect.com/science/article/pii/S0167198718314909",
+    author = "Jan De Pue and Gemmina Di Emidio and R. Daniel Verastegui Flores and Adam Bezuijen and Wim M. Cornelis"
 }
 
 @article{Donze2008,
