Add RockLiningGlobal reference

--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -97,6 +97,20 @@
 	url = {https://www.sciencedirect.com/science/article/pii/S0266352X14002122},
 }
 
+
+@Article{Boon2015b,
+	author = {Boon, C.W. and Houlsby, G.T. and Utili, S.},
+	title = {Designing Tunnel Support in Jointed Rock Masses Via the DEM},
+	journal = {Rock Mechanics and Rock Engineering},
+	year = {2015},
+	volume = {48},
+	number = {2},
+	pages = {603-632},
+	doi = {10.1007/s00603-014-0579-8},
+	url = {https://doi.org/10.1007/s00603-014-0579-8},
+}
+
+
 @article{Bourrier2015,
   title={A reliability-based approach for the design of rockfall protection fences},
   author={Bourrier, F. and Lambert, S. and Baroth, J.},
