--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -144,6 +144,18 @@
 	url = {http://dx.doi.org/10.1002/nag.2198}
 }
 
+@article{Caulk2019,
+    title = {Accelerating Yade’s poromechanical coupling with matrix factorization reuse, parallel task management, and GPU computing},
+    journal = {Computer Physics Communications},
+    pages = {106991},
+    year = {2019},
+    issn = {0010-4655},
+    doi = {https://doi.org/10.1016/j.cpc.2019.106991},
+    url = {http://www.sciencedirect.com/science/article/pii/S0010465519303340},
+    author = {Robert A. Caulk and Emanuele Catalano and Bruno Chareyre},
+    keywords = {Discrete Element Method, Finite Volume, GPU, Acceleration technique, Yade, Poroelastic}
+}
+
 @article{Chalak2017,
   title={Partially saturated media: from DEM simulation to thermodynamic interpretation},
   author={Chalak, C. and Chareyre, B. and Nikooee, E. and Darve, F.},
@@ -996,8 +1008,6 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
 	doi={10.1007/s10035-015-0558-0},
 }
 
-
-
 @article{Papachristos2017,
   title={Intensity and volumetric characterizations of hydraulically driven fractures by hydro-mechanical simulations},
   author={Papachristos, E and Scholtès, L and Donzé, F.V and Chareyre, B},
@@ -1019,6 +1029,14 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
 	year = {2011},
 	doi = {10.1103/PhysRevE.83.041301},
 	url = {http://link.aps.org/doi/10.1103/PhysRevE.83.041301}
+}
+
+@article{Pirnia2018,
+    title = "ICY: An interface between COMSOL multiphysics and discrete element code YADE for the modelling of porous media",
+    journal = "Computers & Geosciences",
+    year = 2018,
+    doi = "https://doi.org/10.1016/j.cageo.2018.11.002",
+    author = "Pouyan Pirnia and François Duhaime and Yannic Ethier and Jean-Sébastien Dubé"
 }
 
 @article{Sayeed2011,
@@ -1433,14 +1451,6 @@ author = {R. Wan and J. Duriez and F. Darve}
   pages={175--186},
   year={2017},
   publisher={Elsevier}
-}
-
-@article{Pirnia2018,
-title = "ICY: An interface between COMSOL multiphysics and discrete element code YADE for the modelling of porous media",
-journal = "Computers & Geosciences",
-year = 2018,
-doi = "https://doi.org/10.1016/j.cageo.2018.11.002",
-author = "Pouyan Pirnia and François Duhaime and Yannic Ethier and Jean-Sébastien Dubé"
 }
 
 
