Adding commas at the end of year line in bibtex entries. Trying to solve https://gitlab.com/yade-dev/trunk/-/jobs/361431525 failure

--- a/doc/citing_yade.bib
+++ b/doc/citing_yade.bib
@@ -5,7 +5,7 @@
 	note = "http://yade-dem.org/doc/",
 	title = "{{Y}ade {D}ocumentation 2nd ed}",
 	publisher = "{The {Y}ade Project}",
-	year = 2015
+	year = 2015,
 }
 
 @incollection{yade:manual2,
@@ -16,7 +16,7 @@
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
 	title = "Using and Programming",
-	year = 2015
+	year = 2015,
 }
 
 @incollection{yade:background2,
@@ -27,7 +27,7 @@
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
 	title = "DEM formulation",
-	year = 2015
+	year = 2015,
 }
 
 @incollection{yade:reference2,
@@ -38,5 +38,5 @@
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
 	title = "Reference Manual",
-	year = 2015
+	year = 2015,
 }
