Update citing_yade.bib: uppercase "DEM" instead of "Dem" when output by BibTex.

--- a/doc/citing_yade.bib
+++ b/doc/citing_yade.bib
@@ -26,7 +26,7 @@
 	booktitle = "{Y}ade {D}ocumentation 2nd ed",
 	note = "http://yade-dem.org/doc/",
 	publisher = "{The {Y}ade Project}",
-	title = "DEM formulation",
+	title = "{DEM} formulation",
 	year = 2015,
 }
 
