--- a/doc/yade-tech-archive.bib
+++ b/doc/yade-tech-archive.bib
@@ -22,7 +22,7 @@
     url = {https://yade-dem.org/publi/YadeTechnicalArchive/Yade1DFluidVANS_Validations.pdf}
 }
 
-@article{Chareyre2019,
+@article{Chareyre2019b,
   	author = {Chareyre, B. and Caulk, R.A. and Chèvremont, W. and Guntz, T. and Kneib, F. and Kunhappen, D. and Pourroy, J.},
   	title = {Calcul distribué MPI pour la dynamique de systèmes particulaires},
   	journal = {Yade Technical Archive},
