add info on domain decomposition, modify figure filenames

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1015,3 +1015,39 @@ author = "D.O. Potyondy and P.A. Cundall"
   year         = {2018},
   url          = {https://yade-dem.org/w/images/e/ee/Yade1DFluidVANS_Validations.pdf}
 }
+
+@Article{Berger1987,
+author = {Berger, M. J. and Bokhari, S. H.},
+title = {A Partitioning Strategy for Nonuniform Problems on Multiprocessors},
+year = {1987},
+issue_date = {May 1987},
+publisher = {IEEE Computer Society},
+address = {USA},
+volume = {36},
+number = {5},
+issn = {0018-9340},
+url = {https://doi.org/10.1109/TC.1987.1676942},
+doi = {10.1109/TC.1987.1676942},
+journal = {IEEE Trans. Comput.},
+month = may,
+pages = {570–580},
+numpages = {11},
+keywords = {load balancing, domain decomposition, pde’s, partitioning, Binary decomposition, multiprocessing, mapping problem}
+}
+
+
+
+@InProceedings{Fleissner2007,
+author=Fleissner, Florian and Eberhard, Peter",
+title="Parallel Load Balanced Particle Simulation with Hierarchical Particle Grouping Strategies",
+booktitle="IUTAM Symposium on Multiscale Problems in Multibody System Contacts",
+year="2007",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="33--44",
+abstract="We introduce a new approach for control based load-balanced particle simulation, applying a recursive domain decomposition scheme that enables a minimization of communication expense and efficient hierarchical parallel neighborhood search, especially optimized for multiuser clusters of workstations with fluctuating processor loads.",
+isbn="978-1-4020-5981-0"
+}
+
+
+
