Added Hicham Benniou PhD reference

--- a/doc/yade-theses.bib
+++ b/doc/yade-theses.bib
@@ -208,3 +208,11 @@
 	year = {2018},
 	url = {https://github.com/stranskyjan/phd-thesis},
 }
+
+@phdthesis{Benniou2016,
+	author = {Hicham Benniou},
+	school = {École doctorale Ingénierie - matériaux mécanique énergétique environnement procédés production (Grenoble)},
+	title = {Modélisation par éléments discrets du comportement des matériaux cimentaires sous impact sévère : prise en compte du taux de saturation},
+	year = {2016},
+	url = {https://tel.archives-ouvertes.fr/tel-01587775},
+}
