--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -1453,4 +1453,13 @@ author = {R. Wan and J. Duriez and F. Darve}
   publisher={Elsevier}
 }
 
+@article{Benniou2020,
+  title={Discrete element modeling of concrete under high stress level: influence of saturation ratio},
+  author={Benniou, Hicham and Accary, Abdallah and Malecot, Yann Briffaut, Matthieu and Daudeville,Laurent},
+  journal={Computational Particle Mechanics},
+  doi ={10.1007/s40571-020-00318-5},
+  year={2020},
+  publisher={Springer}
+}
+
 
