fix indent issues in doc and bib/sphinx warnings

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -974,7 +974,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 	journal = "3rd International FLAC/DEM Symposium‏",
 	pages = "1-11",
 	title = "Further investigations of microseismicity in bonded particle models",
-	year = 2013
+	year = "2013"
 }
 
 @book{Scholz2003,
@@ -1017,32 +1017,25 @@ author = "D.O. Potyondy and P.A. Cundall"
 }
 
 @Article{Berger1987,
-author = {Berger, M. J. and Bokhari, S. H.},
-title = {A Partitioning Strategy for Nonuniform Problems on Multiprocessors},
-year = {1987},
-publisher = {IEEE Computer Society},
-address = {USA},
-volume = {36},
-number = {5},
-issn = {0018-9340},
-url = {https://doi.org/10.1109/TC.1987.1676942},
-doi = {10.1109/TC.1987.1676942},
-journal = {IEEE Trans. Comput.},
-pages = {570–580},
-numpages = {11},
-keywords = {load balancing, domain decomposition, pde’s, partitioning, Binary decomposition, multiprocessing, mapping problem}
+	author = {Berger, M. J. and Bokhari, S. H.},
+	title = {A Partitioning Strategy for Nonuniform Problems on Multiprocessors},
+	year = {1987},
+	volume = {36},
+	number = {5},
+	url = {https://doi.org/10.1109/TC.1987.1676942},
+	doi = {10.1109/TC.1987.1676942},
+	journal = {IEEE Trans. Comput.},
+	pages = {570-580}
 }
 
 
-
-@InProceedings{Fleissner2007,
-author="Fleissner, Florian and Eberhard, Peter",
-title="Parallel Load Balanced Particle Simulation with Hierarchical Particle Grouping Strategies",
-booktitle="IUTAM Symposium on Multiscale Problems in Multibody System Contacts",
-year="2007",
-publisher="Springer Netherlands",
-address="Dordrecht",
-pages="33--44"
+@inproceedings{Fleissner2007,
+	title={Parallel Load Balanced Particle Simulation with Hierarchical Particle Grouping Strategies},
+	author={Fleissner, Florian and Eberhard, Peter},
+	booktitle={IUTAM Symposium on Multiscale Problems in Multibody System Contacts},
+	year={2007},
+	month={June},
+	pages={33-44}
 }
 
 
