--- a/doc/yade-theses.bib
+++ b/doc/yade-theses.bib
@@ -223,4 +223,11 @@
   year={2019},
   school={Ghent University},
   url={https://www.researchgate.net/publication/336604225_Advances_in_modelling_vehicle-induced_stress_transmission_in_relation_to_soil_compaction}, 
+
+@phdthesis{Kunhappan2018,
+  TITLE = {Numerical modeling of long flexible fibers in inertial flows.},
+  AUTHOR = {Kunhappan, Deepak},
+  URL = {https://tel.archives-ouvertes.fr/tel-01877792/file/KUNHAPPAN_2018_archivage.pdf},
+  SCHOOL = {{Université Grenoble Alpes}},
+  YEAR = {2018}
 }
