upload png format of figures (and a missing pdf format)

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -775,8 +775,7 @@ author = "D.O. Potyondy and P.A. Cundall"
 
 @article{RevilBaudard2013,
   author = {Revil-Baudard, T. and Chauchat, J.},
-  title = {A two-phase model for sheet flow regime based on dense granular flow
-	rheology},
+  title = {A two-phase model for sheet flow regime based on dense granular flow rheology},
   journal = {Journal of Geophysical Research: Oceans},
   year = {2013},
   volume = {118},
@@ -835,34 +834,32 @@ author = "D.O. Potyondy and P.A. Cundall"
 
 @article{Monaghan1992,
   author = {{Monaghan}, J.~J.},
-  title = "{Smoothed particle hydrodynamics}",
+  title = {Smoothed particle hydrodynamics},
   journal = {Annual Review of Astronomy and Astrophysics},
-  year = 1992,
-  volume = 30,
+  year = {1992},
+  volume = {30},
   pages = {543-574},
   doi = {10.1146/annurev.aa.30.090192.002551}
 }
 
 @article{Morris1997,
-  author = {Morris, Joseph P and Fox, Patrick J and Zhu, Yi},
-  title = "Modeling Low Reynolds Number Incompressible Flows Using \{SPH\} ",
+  author = "Morris, Joseph P and Fox, Patrick J and Zhu, Yi",
+  title = "Modeling Low Reynolds Number Incompressible Flows Using SPH",
   journal = "Journal of Computational Physics ",
   volume = "136",
   number = "1",
-  pages = "214 - 226",
-  year = 1997,
-  note = "",
+  pages = "214-226",
+  year = "1997",
   issn = "0021-9991",
   doi = "http://dx.doi.org/10.1006/jcph.1997.5776",
-  url = "http://www.sciencedirect.com/science/article/pii/S0021999197957764",
+  url = "http://www.sciencedirect.com/science/article/pii/S0021999197957764"
 }
 
 @article{Lucy1977,
   author = {{Lucy}, L.~B.},
-  title = "{A numerical approach to the testing of the fission hypothesis}",
+  title = {A numerical approach to the testing of the fission hypothesis},
   journal = {Astronomical Journal},
-  year = 1977,
-  month = "Dec",
+  year = {1977},
   volume = 82,
   pages = {1013-1024},
   doi = {10.1086/112164},
@@ -871,12 +868,11 @@ author = "D.O. Potyondy and P.A. Cundall"
 
 @article{Monaghan1985,
   author = {{Monaghan}, J.~J. and {Lattanzio}, J.~C.},
-  title = "{A refined particle method for astrophysical problems}",
+  title = {A refined particle method for astrophysical problems},
   journal = {Astronomy and Astrophysics},
   keywords = {Computational Astrophysics, Gravitational Collapse, Gravitational Fields, Many Body Problem, Molecular Clouds, Stellar Evolution, Angular Momentum, Binary Stars, Computational Grids, Interpolation, Kernel Functions, Particle Mass, Stellar Orbits},
-  year = 1985,
-  month = "Aug",
-  volume = 149,
+  year = {1985},
+  volume = {149},
   pages = {135-143},
   url = {http://adsabs.harvard.edu/abs/1985A%26A...149..135M}
 }
@@ -948,14 +944,6 @@ author = "D.O. Potyondy and P.A. Cundall"
 	year = {1994},
 	note = {Report No. 03-21-22-0-01, Delft University of Technology, Faculty of Civil Engineering},
 	url = {http://www.csarmento.uminho.pt/docs/ncr/de_civil/1994_Lourenco.pdf}
-}
-
-@Article{ Caulk2018,
-	title = "Stochastic Augmentation of the Discrete Element Method for the Investigation of Tensile Rupture in Heterogeneous Rock",
-	author = "R. Caulk",
-	journal = "Yade Technical Archive",
-	year = 2018,
-	url= "https://www.yade-dem.org/w/images/f/f3/Caulkr_stochasticaugmentationofDEM-031618.pdf"
 }
 
 @Article{ Hazzard2000,
