--- a/doc/yade-conferences.bib
+++ b/doc/yade-conferences.bib
@@ -1060,7 +1060,7 @@
   url={https://www.epj-conferences.org/articles/epjconf/pdf/2017/09/epjconf162060.pdf}
 }
 
-@inproceedings{doi:10.1061/9780784480779.051,
+@inproceedings{Chareyre2017b,
     author = {B. Chareyre  and E. Nikooee  and C. Chalak  and C. Yuan },
     title = {Micromechanical Insights into the Effective Stresses},
     booktitle = {Poromechanics VI},
