adding open geomechanics reference to doc and pubs

--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -156,6 +156,18 @@
     keywords = {Discrete Element Method, Finite Volume, GPU, Acceleration technique, Yade, Poroelastic}
 }
 
+@article{Caulk2020,
+     author = {Caulk, Robert A.},
+     title = {Modeling acoustic emissions in heterogeneous rocks during tensile fracture with the Discrete Element Method},
+     journal = {Open Geomechanics},
+     publisher = {Alert Geomaterials},
+     volume = {2},
+     year = {2020},
+     doi = {10.5802/ogeo.5},
+     language = {en},
+     url={opengeomechanics.centre-mersenne.org/item/OGEO_2020__2__A2_0/}
+}
+
 @article{Chalak2017,
   title={Partially saturated media: from DEM simulation to thermodynamic interpretation},
   author={Chalak, C. and Chareyre, B. and Nikooee, E. and Darve, F.},
@@ -690,7 +702,7 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
 
 @article{Kozicki2006a,
 	title = {2{D} Lattice Model for Fracture in Brittle Materials},
-	author = {Kozicki, J. and Tejchman, J.}, 
+	author = {Kozicki, J. and Tejchman, J.},
 	journal = {Archives of Hydro-Engineering and Environmental Mechanics},
 	pages = {71--88},
 	volume = {53},
@@ -888,7 +900,7 @@ url = {http://www.sciencedirect.com/science/article/pii/S0266352X09000469},
    journal = {Physics of Fluids},
    year = {2015},
    volume = {27},
-   number = {11}, 
+   number = {11},
    pages = {113302},
    url = {http://arxiv.org/pdf/1605.06085.pdf},
    doi = {10.1063/1.4935703}
@@ -1461,5 +1473,3 @@ author = {R. Wan and J. Duriez and F. Darve}
   year={2020},
   publisher={Springer}
 }
-
-
