Add references to article describing lubrication law

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -98,6 +98,19 @@ Thanks.
   url = "https://link.aps.org/doi/10.1103/PhysRevFluids.4.064302"
 }
 
+@article{ Chevremont2020,
+title = "Lubricated contact model for numerical simulations of suspensions",
+journal = "Powder Technology",
+volume = "372",
+pages = "600 - 610",
+year = "2020",
+issn = "0032-5910",
+doi = "https://doi.org/10.1016/j.powtec.2020.06.001",
+url = "http://www.sciencedirect.com/science/article/pii/S0032591020305064",
+author = "William Chèvremont and Hugues Bodiguel and Bruno Chareyre",
+keywords = "Suspension, Granular, Contact, Lubrication, Friction"
+}
+
 
 @Article{ Villard2004a,
 	title = "Design methods for geosynthetic anchor trenches on the basis of true scale experiments and discrete element modelling",
