--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -289,6 +289,42 @@
     author = "Jan De Pue and Gemmina Di Emidio and R. Daniel Verastegui Flores and Adam Bezuijen and Wim M. Cornelis"
 }
 
+@article{DePue2019b,
+  title={DEM simulation of stress transmission under agricultural traffic Part 1: Comparison with continuum model and parametric study},
+  author={De Pue, Jan and Cornelis, Wim M},
+  journal={Soil and Tillage Research},
+  volume={195},
+  pages={104408},
+  year={2019},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.still.2019.104408},
+  url={https://www.sciencedirect.com/science/article/pii/S0167198719303393},
+}
+
+@article{DePue2020a,
+  title={DEM simulation of stress transmission under agricultural traffic Part 2: Shear stress at the tyre-soil interface},
+  author={De Pue, Jan and Lamand{\'e}, Mathieu and Cornelis, Wim M},
+  journal={Soil and Tillage Research},
+  volume={203},
+  pages={104660},
+  year={2020},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.still.2020.104660},
+  url={https://www.sciencedirect.com/science/article/pii/S0167198720304426},
+}
+
+@article{DePue2020b,
+  title={DEM simulation of stress transmission under agricultural traffic Part 3: Evaluation with field experiment},
+  author={De Pue, Jan and Lamand{\'e}, Mathieu and Schj{\o}nning, Per and Cornelis, Wim M},
+  journal={Soil and Tillage Research},
+  volume={200},
+  pages={104606},
+  year={2020},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.still.2020.104606},
+  url={https://www.sciencedirect.com/science/article/pii/S0167198719308943},
+}
+
 @article{Donze2008,
   	title={Impacts on cohesive frictional geomaterials},
   	author={Donzé, F.V.},
