--- a/doc/yade-theses.bib
+++ b/doc/yade-theses.bib
@@ -216,3 +216,11 @@
 	year = {2016},
 	url = {https://tel.archives-ouvertes.fr/tel-01587775},
 }
+
+@phdthesis{DePue2019c,
+  title={Advances in modelling vehicle-induced stress transmission in relation to soil compaction},
+  author={De Pue, Jan},
+  year={2019},
+  school={Ghent University},
+  url={https://www.researchgate.net/publication/336604225_Advances_in_modelling_vehicle-induced_stress_transmission_in_relation_to_soil_compaction}, 
+}
